--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ github_link: https://github.com/flyfaerss
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/me.png
+avatar: ./assets/img/me.jpg
 # favicon: ./assets/img/icon_ailurus.png
 # favicon_dark: ./assets/img/icon_ailurus.png
 
