--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 title: Jiarui Yang
 titlecn: 杨嘉瑞
 #position: Senior Engineer
-affiliation: IIE CAS
-email: yangjiarui@iie.ac.cn
+affiliation: Jiarui Yang@FUDAN
+email: jryang24@m.fudan.edu.cn # yangjiarui@iie.ac.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: homepage
-description: This is the academic homepage of M.S. Jiarui Yang.
+description: This is the academic homepage of phd candidate Jiarui Yang.
 canonical: https://flyfaerss.github.io/
 
 # Links 
