--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jiarui Yang
 titlecn: 杨嘉瑞
 #position: Senior Engineer
-affiliation: Jiarui Yang@FUDAN
+affiliation: FUDAN
 email: jryang24@m.fudan.edu.cn # yangjiarui@iie.ac.cn
 
 # Search Engine Optimization (SEO)
